k8s/deployment.yaml
# -------------------------------
# Deployment
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techfixer-deployment
  namespace: "2401029"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techfixer
  template:
    metadata:
      labels:
        app: techfixer
    spec:
      imagePullSecrets:
        - name: nexus-secret   # ⚠️ DO NOT CHANGE

      containers:
        - name: techfixer
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401029/techfixer-app:latest

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 30

          volumeMounts:
            - name: app-storage
              mountPath: /app/data

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: techfixer-pvc
